[metadata]
name = echostream-node
author = Joseph Wortmann
author_email = jwortmann@quinovas.com
version = 0.0.1
description = Helper classes and functions for implementing EchoStream nodes
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    aiohttp[speedups]
    aws-error-utils
    aws-lambda-context
    awsserviceendpoints
    dynamic-function-loader
    gql[aiohttp,requests]==3.0.0b0
    pycognito
    requests
    simplejson
python_requires = >=3.9